--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="ru">
+<head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Приложение, созданное с помощью Create React App" />
+    <meta name="keywords" content="React, веб-разработка, приложение" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Волтов Илья</title>
-  </head>
-  <body>
+    <!-- Дополнительные стили -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" /> <!-- Если у вас есть дополнительные стили -->
+</head>
+<body>
     <noscript>Для запуска этого приложения вам необходимо включить JavaScript.</noscript>
     <div id="root"></div>
-  </body>
+    <!-- Подключение скриптов, если есть дополнительные -->
+    <script src="%PUBLIC_URL%/script.js"></script> <!-- Если у вас есть дополнительные скрипты -->
+</body>
 </html>
