--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,24 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Приложение, созданное с помощью Create React App" />
     <meta name="keywords" content="React, веб-разработка, приложение" />
+
+    <!-- Метатеги Open Graph -->
+    <meta property="og:title" content="Волтов Илья" />
+    <meta property="og:description" content="Приложение, созданное с помощью Create React App" />
+    <meta property="og:image" content="%PUBLIC_URL%/image.png" /> <!-- Путь к изображению -->
+    <meta property="og:url" content="https://ваш-сайт.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Метатеги Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Волтов Илья" />
+    <meta name="twitter:description" content="Приложение, созданное с помощью Create React App" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/image.png" /> <!-- Путь к изображению -->
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Волтов Илья</title>
+
     <!-- Дополнительные стили -->
     <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" /> <!-- Если у вас есть дополнительные стили -->
 </head>
