add  econom certificate + TOPBAR

--- a/public/index.html
+++ b/public/index.html
@@ -5,33 +5,33 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Приложение, созданное с помощью Create React App" />
+    <meta name="description" content="Ilya Voltov's resume website" />
     <meta name="keywords" content="React, веб-разработка, приложение" />
 
     <!-- Метатеги Open Graph -->
     <meta property="og:title" content="Волтов Илья" />
-    <meta property="og:description" content="Приложение, созданное с помощью Create React App" />
-    <meta property="og:image" content="%PUBLIC_URL%/image.png" /> <!-- Путь к изображению -->
+    <meta property="og:description" content="Ilya Voltov's resume website" />
+    <meta property="og:image" content="%PUBLIC_URL%/image.png" />
     <meta property="og:url" content="https://ваш-сайт.com" />
     <meta property="og:type" content="website" />
 
     <!-- Метатеги Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Волтов Илья" />
-    <meta name="twitter:description" content="Приложение, созданное с помощью Create React App" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/image.png" /> <!-- Путь к изображению -->
+    <meta name="twitter:description" content="Ilya Voltov's resume website" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/image.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Волтов Илья</title>
 
-    <!-- Дополнительные стили -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" /> <!-- Если у вас есть дополнительные стили -->
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" />
 </head>
 <body>
     <noscript>Для запуска этого приложения вам необходимо включить JavaScript.</noscript>
     <div id="root"></div>
-    <!-- Подключение скриптов, если есть дополнительные -->
-    <script src="%PUBLIC_URL%/script.js"></script> <!-- Если у вас есть дополнительные скрипты -->
+
+    <script src="%PUBLIC_URL%/script.js"></script>
 </body>
 </html>
