--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Ilya Voltov's resume website" />
@@ -11,27 +11,24 @@
     <!-- Метатеги Open Graph -->
     <meta property="og:title" content="Волтов Илья" />
     <meta property="og:description" content="Ilya Voltov's resume website" />
-    <meta property="og:image" content="%PUBLIC_URL%/image.png" />
-    <meta property="og:url" content="https://ваш-сайт.com" />
+    <meta property="og:image" content="/image.png" />
+    <meta property="og:url" content="https://voltovcv.site/" />
     <meta property="og:type" content="website" />
 
     <!-- Метатеги Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Волтов Илья" />
     <meta name="twitter:description" content="Ilya Voltov's resume website" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/image.png" />
+    <meta name="twitter:image" content="/image.png" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Волтов Илья</title>
 
-
-    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
     <noscript>Для запуска этого приложения вам необходимо включить JavaScript.</noscript>
     <div id="root"></div>
 
-    <script src="%PUBLIC_URL%/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
